--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -35,3 +35,31 @@ jobs:
             - |
               cd cloudcache-management-cf-plugin
               go build -o ./pcc ./cmd/main
+  - name: test-cloudcache-management-cf-plugin
+    serial: true
+    plan:
+      - aggregate:
+          - get: cloudcache-management-cf-plugin
+            trigger: true
+            passed: [build-cloudcache-management-cf-plugin]
+      - task: build-image
+        timeout: 1h
+        config:
+          image_resource:
+            type: docker-image
+            source:
+              repository: golang
+              tag: latest
+          inputs:
+            - name: cloudcache-management-cf-plugin
+          outputs:
+            - name: results
+          platform: linux
+          run:
+            path: /bin/sh
+            args:
+            - -ec
+            - |
+              cd cloudcache-management-cf-plugin
+              go get github.com/onsi/ginkgo/ginkgo
+              ginkgo -r
