log smoke tests commands, make pcc test depend only on comparable gemfire standalone test

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -289,7 +289,7 @@ jobs:
   plan:
   - get: cloudcache-management-cf-plugin
     trigger: true
-    passed: [test-cloudcache-management-cf-plugin, test-cloudcache-management-cf-standalone-9.9, test-cloudcache-management-cf-standalone-develop]
+    passed: [test-cloudcache-management-cf-standalone-9.9]
   - get: cloudcache-management-cf-plugin-ci-image
   - put: gcp-env
     tags: [pivotal-internal-worker]
